# modules

./: CMakeLists.txt  README.md
code/: engine.c  gameplay.c  interface.h
code/engine/: engine.c  interface.h
code/gameplay/: cant_include_this_from_engine.h  gameplay.c
